feat: implement fine-grained reactivity and stabilize engine core
- Implement XplEnvironmentWatcher decorator for non-intrusive reactivity hooks in Environment
- Integrate XplReactiveState and XplReactivityRenderer for fine-grained DOM patching
- Resolve scope capture issues in XplFunction and POO instantiation logic
- Optimize JavaFxRenderer reconciliation to handle ghost text nodes and dynamic CSS updates
- Fix arity validation errors in higher-order functions (callbacks)
- Stabilize engine global scoping and type inference for generic templates